fix gap

--- a/css/mycss.css
+++ b/css/mycss.css
@@ -1,6 +1,6 @@
 body {
   font-family:"微軟正黑體","Microsoft JhengHei","Helvetica Neue",Helvetica,Arial,sans-serif;
-  background-color: #eee;
+  background-color: #FBB03B;
 }
 
 a {
